# wh40k-lore-bot

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI.md  README.md  alembic.ini  pyproject.toml
.bmad-core/: install-manifest.yaml
.bmad-core/checklists/: story-dod-checklist.md
.github/workflows/: test.yml
docs/: architecture.md  brainstorming-session-results.md  e2e-test-plan.md  epic-1-foundation-data-pipeline.md  epic-2-core-rag-query-system.md  implementation-plan-markdown-ingestion.md  ingestion-guide.md  plan-chunk-schema-refactoring.md  plan-remove-sqlite-wiki-chunk.md  prd.md  rag-architecture-research-report.md  rag-evaluation-research.md  research-prompt-rag-architectures.md  wiki-xml-structure-analysis.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/prd/: checklist-results-report.md  epic-details.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.project-setup.md  1.10.ingestion-pipeline.md  1.11.data-quality-validation.md  1.12.ingestion-documentation.md  1.13.cli-tools.md  1.14-handle-redirects.md  1.2.database-schema.md  1.3.markdown-archive-setup.md  1.4.wiki-xml-parser.md  1.5.test-bed-page-selection.md  1.6.text-chunking.md  1.7.openai-embeddings.md  1.8.chroma-vector-database.md  1.9.metadata-extraction.md  2.0-bm25-repository.md  2.1-hybrid-retrieval-service.md  2.2-context-expander.md  2.3-multi-llm-router-structured-output.md  2.4-response-formatter-structured-output.md  2.5-query-orchestrator-structured-output.md  2.6-query-logger-structured-output.md  2.7-cli-adapter-structured-output.md
prompts/: persona-default.md  persona-grimdark.md  persona.md  system.md  user.md
src/: __main__.py
src/cli/: build_bm25.py  build_test_bed.py  chunk.py  db_health.py  delete_chunk.py  embed.py  ingest.py  parse_wiki.py  purge_db.py  retrieve.py  show_chunk.py  stats_db.py  stats_markdown.py  store.py  utils.py
src/common/: __init__.py  constants.py
src/ingestion/: embedding_generator.py  filename_utils.py  markdown_archive.py  markdown_loader.py  metadata_extractor.py  models.py  pipeline.py  test_bed_builder.py  text_chunker.py  validators.py  wiki_xml_parser.py
src/llm/: __init__.py  base_provider.py  llm_router.py  pricing.py  prompt_builder.py  response_formatter.py  structured_output.py
src/llm/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/migrations/: env.py
src/migrations/versions/: 2025_12_26_2316-2ac2f41edf9c_create_wiki_chunk_table.py  2025_12_29_1702-fc8d7cb9e3ec_create_ingestion_progress_table.py  2025_12_31_1136-cdf0612a18b6_add_article_last_updated_to_ingestion_.py
src/models/: __init__.py  base.py  ingestion_progress.py  wiki_chunk.py
src/orchestration/: __init__.py  query_orchestrator.py
src/rag/: __init__.py  context_expander.py  hybrid_retrieval.py  vector_store.py
src/repositories/: __init__.py  bm25_repository.py  chunk_repository.py  ingestion_progress_repository.py
src/utils/: chunk_id.py  config.py  exceptions.py  logger.py
test-data/: .gitignore  e2e-test-wiki.xml
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_cli_ingest_workflows.py  test_cli_workflows.py  test_retrieve_with_context_expansion.py
tests/e2e/fixtures/: __init__.py  extract_minimal_xml.py
tests/integration/: test_bm25_integration.py  test_chroma_integration.py  test_chunk_database.py  test_chunking.py  test_embeddings.py  test_hybrid_retrieval_integration.py  test_metadata_extraction.py  test_test_bed_builder.py  test_xml_parsing.py
tests/unit/: test_bm25_repository.py  test_chunk_repository.py  test_cli_build_bm25.py  test_cli_db_health.py  test_cli_delete_chunk.py  test_cli_ingest.py  test_cli_purge_db.py  test_cli_show_chunk.py  test_cli_stats_db.py  test_cli_stats_markdown.py  test_config.py  test_context_expander.py  test_embedding_generator.py  test_exceptions.py  test_filename_utils.py  test_hybrid_retrieval.py  test_logger.py  test_markdown_archive.py  test_metadata_extractor.py  test_pipeline_change_detection.py  test_query_orchestrator.py  test_response_formatter.py  test_test_bed_builder_unit.py  test_text_chunker.py  test_vector_store.py  test_wiki_chunk.py  test_wiki_xml_parser.py
tests/unit/llm/: test_anthropic_provider.py  test_llm_router.py  test_openai_provider.py  test_pricing.py  test_prompt_builder.py  test_structured_output.py
